elb.tf
resource "aws_elb" "wildthing_elb" {
  name            = "wildthing-elb-${terraform.workspace}"
  subnets         = local.pub_sub_ids
  security_groups = [aws_security_group.elb_sg.id]
  

  listener {
    instance_port      = 80
    instance_protocol  = "http"
    lb_port            = 80
    lb_protocol        = "http"
  }

  health_check {
    healthy_threshold   = 2
    unhealthy_threshold = 3
    timeout             = 30
    target              = "HTTP:80/index.html"
    interval            = 60
  }

  instances                   = aws_instance.web.*.id
  cross_zone_load_balancing   = true
  idle_timeout                = 400
  connection_draining         = true
  connection_draining_timeout = 30

  tags = {
    Name = "wildthing_elb_${terraform.workspace}"
  }
}


resource "aws_security_group" "elb_sg" {
  name        = "elb_sg"
  description = "Allow traffic for elb"
  vpc_id      = aws_vpc.wildthing.id
    
  ingress {
  from_port   = 80
  to_port     = 80
  protocol    = "tcp"
  #cidr_blocks = ["24.14.91.178/32"]
  cidr_blocks = ["0.0.0.0/0"]
  }  

  egress {
  from_port   = 0
  to_port     = 0
  protocol    = "-1"
  cidr_blocks = ["0.0.0.0/0"]
  }
}
